First version, styled & all applicable links working

--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Construction</title>
+    <title>AKStein //Full-Stack Portfolio</title>
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <h1>Portfolio site for Alex K. Stein WIP.</h1>
+    <div class="container">
+        <header>
+            <div id="logo">
+                <h1>Alex K. Stein </h1>
+                <h2> //Full-Stack Java Developer</h2>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#top">Home</a></li>
+                    <li><a href="#AboutMe">About Me</a></li>
+                    <li><a href="#Portfolio">Projects</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="AboutMe">
+                <img class="portrait" src="/gfx/selfie.jpg" alt="Filler portrait of Alex K. Stein">
+                <article id="MyInfo">
+                    <h2>About Me</h2>
+                    <hr> <br>
+                    <p> My name is Alex Stein, and this is my portfolio website for my work as a full-stack web & software developer. 
+                        I am currently a student at We Can Code IT, and the projects below were created during my time there. 
+                        In time, as I continue to work on newer and more exciting projects, and learning everything I can along the way, so will my projects section from these new and exciting endeavors.
+                        <br><br>
+                        I believe that everything is learning opportunity, and that I will always grow when following the infamous advice of Jedi Master Yoda, ""Do, or do not. There is no
+                        try." If I approach a challenge with the mindset that I'm going to try, then I don't have the mindset of success and growth. 
+                        Failure is the best teacher, but only when you're trying to succeed.
+                        <br><br>
+                        Through a life full of hard work and a love of learning, I've learned a great many things; most importantly is that I basically know nothing in the grand scheme of things. 
+                        <br><br>
+                        Coding skills include, not limited to: <br>
+                        Java • Spring • Thymeleaf • JavaScript • MVC • HTML • CSS • TDD • Agile (Scrum) • Object
+                        Oriented Programming (OOP) • JSON • React • REST APIs • Responsive Design / Mobile • Relational
+                        Databases • Source Control / GitHub
+                    </p>
+                    <br>
+                    <div id="contact">Contact me:
+                        <a href="mailto:aksteinphoto@gmail.com">&nbsp;-E-mail me&nbsp;</a>
+                        <a href="https://www.linkedin.com/in/alexkstein/">&nbsp;-LinkedIn&nbsp;</a>
+                    </div>
+                </article>
+            </section>
+            <section id="Portfolio">
+                <h2>Projects</h2><a href="https://github.com/AlexKStein">
+                    <div class="GitLink"> My GitHub Page</div>
+                </a>
+                <hr><br>
+                <div id="projects">
+                    <a href="https://github.com/2022-Summer-Cohort/virtual-pet-AlexKStein" class="project"><img src="gfx/pets.jpg" alt="Karl the dog licking a can.">
+                        <div class="image-text"> Virtual Pet Shelter</div>
+                    </a>
+                    <a href="#" class="project"><img src="gfx/clothing.jpg"
+                            alt="Clothing rack in the foreground of a store.">
+                        <div class="image-text">Review Website</div>
+                    </a>
+                    <a href="#" class="project"><img src="gfx/compWIP.jpg" alt="Green keyboard up close">
+                        <div class="image-text"> WIP</div>
+                    </a>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <hr>
+            <p>©2022 Alex K. Stein</p>
+        </footer>
+    </div>
 </body>
+
 </html>
